[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["user_manual"]

[tool.pytest.ini_options]
python_files = ["tests/*.py",]
testpaths = ["tests/*.py",]

[project]
name = 'BlendPATH'
description='Blending Pipeline Analysis Tool for Hydrogen'
authors = [
    {name="Jamie Kee",email="Jamie.Kee@nlr.gov"},
    {name="Evan Reznicek",email="Evan.Reznicek@nlr.gov"},
    {name="Burcin Cakir Erdener",email="Burcin.CakirErdener@nlr.gov"},
    {name="Kevin Topolski",email="Kevin.Topolski@nlr.gov"},
]
version = '2.1'
readme = "README.md"
requires-python  = ">=3.10, <3.14"
dependencies = [
    "numpy",
    "pandas",
    "cantera",
    "importlib_resources",
    "scipy",
    "xlsxwriter",
    "ProFAST",
    "pytest",
    "python_calamine"
]
